--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.2",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
@@ -21,7 +22,9 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
     "react-native-shadow-2": "^7.0.6",
-    "react-native-svg": "^13.4.0"
+    "react-native-shared-element": "^0.8.4",
+    "react-native-svg": "9.13.3",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
