--- a/package.json
+++ b/package.json
@@ -9,25 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.2",
+    "add": "^2.0.6",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.18",
+    "or": "^0.2.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-gesture-handler": "^2.7.1",
-    "react-native-reanimated": "^2.10.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-shadow-2": "^7.0.6",
     "react-native-shared-element": "^0.8.4",
-    "react-native-svg": "9.13.3",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-native-svg": "12.3.0",
+    "react-navigation-shared-element": "^3.1.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.19.4"
   },
   "private": true
 }
